Add views increment